--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,9 @@
         </activity>
         <activity
             android:name=".CreateAcctActivity" />
+        <activity
+            android:name=".DashboardOptionsActivity"
+            android:exported="true"/>
     </application>
 
 </manifest>
