--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,8 +7,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Finalprojectfall2023suicide_squad"
-        tools:targetApi="31">
+        tools:targetApi="31"
+        android:theme="@style/Theme.Finalprojectfall2023suicide_squad">
         <activity
             android:name=".UserLoginActivity"
             android:exported="true">
